Архитектурный Нижний: Нижегородский Кремль

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -48,16 +48,20 @@
                 <h3>Архитектурный Нижний</h3>
                 Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="kremlin" data-chapter="Нижегородский Кремль">
-                    <h4>Нижегородский Кремль</h4>
-                    Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
-                    <br>
+                <div class="chapter" id="kremlin" data-chapter="Нижегородский кремль">
+                    <p>Нижегородский кремль - крепость в историческом центре Нижнего Новгорода и его древнейшая часть, самая узнаваемая достопримечательность Нижнего Новгорода.
+                    Он расположен правом высоком берегу, в месте слияния рек Волги и Оки.</p>
+                    <p>Изначально кремль был деревянным и построен как защита для только что основанного в 1221 году великим князем Юрием Всеволодовичем Нижнего Новгорода. Первая попытка его замены на каменный кремль относится к 1374 году. В это время князь Дмитрий Константинович заложил белокаменный кремль.</p>
                     <img/>
+                    <p>В 1785-1790 годах, во время правления Екатерины II, кремль был отремонтирован - зубцы были укорочены более, чем наполовину, сам он был побелен, а крыши перекрашены в красный цвет.</p>
+                    <p>Долгое время за Кремлём не было надлежащего ухода. Когда началась Отечественная война 1812 года, от его стен отправилось нижегородское ополчение. В это время кремль не являлся оборонительным сооружением, однако в 1894 году была начата реконструкция Дмитриевской башни. Автором проекта и руководителем реконструкции стал архитектор Николай Султанов. Ему было поручено переделать её под художественно-исторический музей. Для этого нужно было вернуть башне её ведущее положение в кремле. Музей был открыт в 1896 году. Дмитриевская башня при этом снова сильно преобразилась, приобретя несвойственный Нижегородскому кремлю облик. На верхушке крыши был помещён двуглавый орёл — герб Российской Империи. Весь кремль вновь был целиком побелён.</p>
+                    <p>С приходом к власти большевиков в Нижегородском кремле произошли значительные перемены. Он вновь был перекрашен в красный цвет, а крыши на башнях стали зелёными. Также с Дмитриевской башни был снят двуглавый орёл; вместо него новые советские власти повесили флаг СССР.</p>
+                    <p>22 июня 1941 года в Кремле состоялось заседание Горьковского обкома по поводу начала Великой Отечественной войны. На Советской площади в тот день прошёл многотысячный митинг, на котором выступил председатель ВКП(б) и обратился к горьковчанам с призывом встать на защиту Родины от немецко-фашистских захватчиков. Позже у стен Кремля собралась Горьковская дивизия и отправилась на фронт. Кремль занял в то время значительное место в обороне Горького. Во время войны кровли Тайницкой, Северной и Часовой башен были разобраны и на верхних площадках установлены зенитные пулемёты.Так крепость защищала воздушное пространство города от немецкой авиации. Нацистские лётчики пытались бомбить Канавинский мост, но встречали кремлёвский зенитный огонь на подлётах к нему. После окончания войны возле стен Кремля, на площади Минина и Пожарского, прошёл грандиозный Парад Победы, завершившийся большим салютом.</p>
+                    <p>30 января 1949 года было объявлено о реставрации кремля, которая продолжалась до 1981 года.</p>
+                    <p>Сегодня это официальная резиденция полномочного представителя Президента России в Приволжском федеральном округе, губернатора Нижегородской области и мэра Нижнего Новгорода.</p>
                 </div>
                 <div class="chapter" id="chkalov_stairs" data-chapter="Чкаловская лестница">
-                    <h4>Чкаловская лестница</h4>
                     Чкаловская лестница это тоже очень узнаваемая достопримечательность.
-                    <br>
                     <img/>
                     <img/>
                 </div>
