Недостающая картинка и YouTube-фрейм

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -49,8 +49,7 @@
                 Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
                 <div id="table_of_contents"></div>
                 <div class="chapter" id="kremlin" data-chapter="Нижегородский кремль">
-                    <p>Нижегородский кремль - крепость в историческом центре Нижнего Новгорода и его древнейшая часть, самая узнаваемая достопримечательность Нижнего Новгорода.
-                    Он расположен правом высоком берегу, в месте слияния рек Волги и Оки.</p>
+                    <p>Нижегородский кремль - крепость в историческом центре Нижнего Новгорода и его древнейшая часть, самая узнаваемая достопримечательность Нижнего Новгорода. Он расположен правом высоком берегу, в месте слияния рек Волги и Оки.</p>
                     <p>Изначально кремль был деревянным и построен как защита для только что основанного в 1221 году великим князем Юрием Всеволодовичем Нижнего Новгорода. Первая попытка его замены на каменный кремль относится к 1374 году. В это время князь Дмитрий Константинович заложил белокаменный кремль.</p>
                     <img/>
                     <p>В 1785-1790 годах, во время правления Екатерины II, кремль был отремонтирован - зубцы были укорочены более, чем наполовину, сам он был побелен, а крыши перекрашены в красный цвет.</p>
@@ -59,6 +58,7 @@
                     <p>С приходом к власти большевиков в Нижегородском кремле произошли значительные перемены. Он вновь был перекрашен в красный цвет, а крыши на башнях стали зелёными. Также с Дмитриевской башни был снят двуглавый орёл; вместо него новые советские власти повесили флаг СССР.</p>
                     <p>22 июня 1941 года в Кремле состоялось заседание Горьковского обкома по поводу начала Великой Отечественной войны. На Советской площади в тот день прошёл многотысячный митинг, на котором выступил председатель ВКП(б) и обратился к горьковчанам с призывом встать на защиту Родины от немецко-фашистских захватчиков. Позже у стен Кремля собралась Горьковская дивизия и отправилась на фронт. Кремль занял в то время значительное место в обороне Горького. Во время войны кровли Тайницкой, Северной и Часовой башен были разобраны и на верхних площадках установлены зенитные пулемёты.Так крепость защищала воздушное пространство города от немецкой авиации. Нацистские лётчики пытались бомбить Канавинский мост, но встречали кремлёвский зенитный огонь на подлётах к нему. После окончания войны возле стен Кремля, на площади Минина и Пожарского, прошёл грандиозный Парад Победы, завершившийся большим салютом.</p>
                     <p>30 января 1949 года было объявлено о реставрации кремля, которая продолжалась до 1981 года.</p>
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mD5JxN3evTA?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><span class="img-label">Видеоверсия: Нижегородский Кремль</span><br><br>
                     <p>Сегодня это официальная резиденция полномочного представителя Президента России в Приволжском федеральном округе, губернатора Нижегородской области и мэра Нижнего Новгорода.</p>
                 </div>
                 <div class="chapter" id="chkalov_stairs" data-chapter="Чкаловская лестница">
