--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -30,6 +30,7 @@
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
+            <span id="navigation-table_of_contents" class="mdl-layout__drawer-navigation-subcategory"></span>
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
                 <a class="mdl-navigation__link mdl-navigation-current-topic">Архитектурный Нижний</a>
                 <a class="mdl-navigation__link" href="theatrical.html">Литературный Нижний</a>
