Изменение стиля текста

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -45,9 +45,9 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <div class="content">
+            <div class="content" id="topic_content">
                 <h3>Архитектурный Нижний</h3>
-                Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
+                <p class="introduction">Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.</p>
                 <div id="table_of_contents"></div>
                 <div class="chapter" id="kremlin" data-chapter="Нижегородский кремль">
                     <p>Нижегородский кремль - крепость в историческом центре Нижнего Новгорода и его древнейшая часть, самая узнаваемая достопримечательность Нижнего Новгорода. Он расположен правом высоком берегу, в месте слияния рек Волги и Оки.</p>
