Архитектурный Нижний: Чкаловская лестница

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -65,9 +65,10 @@
                     <p>Сегодня это официальная резиденция полномочного представителя Президента России в Приволжском федеральном округе, губернатора Нижегородской области и мэра Нижнего Новгорода.</p>
                 </div>
                 <div class="chapter" id="chkalov_stairs" data-chapter="Чкаловская лестница">
-                    Чкаловская лестница это тоже очень узнаваемая достопримечательность.
+                    <p>Чкаловская лестница - не менее узнаваемая нижегородская достопримечательность. Это монументальная лестница в историческом центре Нижнего Новгорода, соединяющая Верхне-Волжскую и Нижне-Волжскую набережные. Она была построена после Великой Отечественной войны и является самой длинной лестницей в России.</p>
                     <img/>
                     <img/>
+                    <p>Сегодня на Чкаловской лестнице устраивают спортивные соревнования, чаще всего в виде забегов. Последняя реставрация лестницы проводилась в 2012—2013 годах.</p>
                 </div>
             </div>
         </div>
