Архитектурный Нижний: Большая Покровская и Театр Драмы

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -70,6 +70,14 @@
                     <img/>
                     <p>Сегодня на Чкаловской лестнице устраивают спортивные соревнования, чаще всего в виде забегов. Последняя реставрация лестницы проводилась в 2012—2013 годах.</p>
                 </div>
+                <div class="chapter" id="bolshaya_pokrovskaya" data-chapter="Большая Покровская улица">
+                    <p>Большая Покровская - главная улица Нижнего Новгорода, расположенная в историческом центре города и связывающая 4 площади: Минина и Пожарского, Театральную, Горького и Лядова. Это одна из самых старинных улиц города, а до 1917 года считалась дворянской.</p>
+                    <img/>
+                </div>
+                <div class="chapter" id="drama_theatre" data-chapter="Нижегородский театр драмы">
+                    <p>Нижегородский театр драмы - один из старейших русских театров. История создания театра восходит к 1798 году, когда князь Н. Г. Шаховской открыл в Нижнем Новгороде публичный театр.</p>
+                    <img/>
+                </div>
             </div>
         </div>
     </main>
