Закрытие навигатора при переходе/клике на лого

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="design/mdl/material.min.css">
     <script src="design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Исторический зал</title>
@@ -24,7 +25,7 @@
     </header>
     <div class="mdl-layout__drawer">
         <div class="mdl-layout-drawer-title-area">
-            <img class="mini-logo mdl-layout-drawer-title-logo" src="img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+            <img class="mini-logo mdl-layout-drawer-title-logo" src="img/gymnasium_logo.png" alt="Эмблема Гимназии №2" onclick="closeNavigation()">
             <span class="mdl-layout-title">Исторический зал</span>
         </div>
         <nav class="mdl-navigation">
