--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
     <script>var topicName='Архитектурный Нижний';var topicId='architectural'</script>
+    <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
     <link rel="stylesheet" href="../css/topic.css">
     <title>Архитектурный Нижний - Исторический зал</title>
