--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img alt="Архитектурный Нижний" src="img/cards/architecture.jpg" />
                     <div class="mask" style="background-color: rgba(132,7,0,0.6)">
                         <h2>Архитектурный Нижний</h2>
-                        <p>Интересная информация об архитектуре Нижнего Новгорода</p>
+                        <p>Достопримечательности и история архитектуры Нижнего Новгорода</p>
                         <a href="topics/architectural.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
                     </div>
                 </div>
