--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/design/mdl/material.min.css">
     <script src="/design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/js/common.js">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/index.css">
     <title>Страница не найдена - Исторический зал</title>
@@ -18,12 +19,10 @@
             height: 100%;
             width: 100%;
         }
-
         .middle {
             display: table-cell;
             vertical-align: middle;
         }
-
         .inner {
             margin-left: auto;
             margin-right: auto;
