Ссылка на главную страницу

--- a/404.html
+++ b/404.html
@@ -67,6 +67,7 @@
                     <div class="inner">
                         <h3>Страница не найдена</h3>
                         <h4>Ошибка 404</h4>
+                        <h5><a href="/index.html">На главную</a></h5>
                         <img style="width: 25%;height:10%" src="/img/flag.jpg" alt="Флаг Нижегородской области" />
                     </div>
                 </div>
