--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -78,6 +78,7 @@
                 <div class="chapter" id="drama_theatre" data-chapter="Нижегородский театр драмы">
                     <p>Нижегородский театр драмы - один из старейших русских театров. История создания театра восходит к 1798 году, когда князь Н. Г. Шаховской открыл в Нижнем Новгороде публичный театр.</p>
                     <img/>
+                    <img data-label="Проверка: [data-label] img-label / 1; path=img2.jpg"/>
                 </div>
             </div>
         </div>
