Закрытие навигации и новая глава

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -79,6 +79,8 @@
                     <p>Нижегородский театр драмы - один из старейших русских театров. История создания театра восходит к 1798 году, когда князь Н. Г. Шаховской открыл в Нижнем Новгороде публичный театр.</p>
                     <img/>
                 </div>
+				<div class="chapter" id="art_musem" data-chapter="Нижегородский государственный художественный музей">
+				</div>
             </div>
         </div>
         <footer class="mdl-mini-footer">
