Нижегородский государственный художественный музей

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -79,8 +79,10 @@
                     <p>Нижегородский театр драмы - один из старейших русских театров. История создания театра восходит к 1798 году, когда князь Н. Г. Шаховской открыл в Нижнем Новгороде публичный театр.</p>
                     <img/>
                 </div>
-				<div class="chapter" id="art_musem" data-chapter="Нижегородский государственный художественный музей">
-				</div>
+                <div class="chapter" id="art_musem" data-chapter="Нижегородский государственный художественный музей">
+                    <p>Нижегородский государственный художественный музей (НГХМ) — один из старейших музеев России и крупнейший музей изобразительного искусства в Нижегородской области. Музей был открыт в 1896 году, став одним из первых общедоступных музеев в русской провинции. Сегодня это памятник федерального значения.</p>
+                    <img/>
+                </div>
             </div>
         </div>
         <footer class="mdl-mini-footer">
