--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -83,6 +83,11 @@
                     <p>Нижегородский государственный художественный музей (НГХМ) — один из старейших музеев России и крупнейший музей изобразительного искусства в Нижегородской области. Музей был открыт в 1896 году, став одним из первых общедоступных музеев в русской провинции. Сегодня это памятник федерального значения.</p>
                     <img/>
                 </div>
+				<div class="chapter" id="fair" data-chapter="Нижегородская ярмарка">
+                    <p>Нижегородская ярмарка — исторический район, где располагалась крупнейшая ярмарка Российской империи и располагается главная нижегородская выставка.</p>
+                    <img/>
+                    <img data-label="XIX век"/>
+                </div>
             </div>
         </div>
         <footer class="mdl-mini-footer">
