--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                 <div class="view">
                     <img alt="Архитектурный Нижний" src="img/cards/architecture.jpg" />
                     <div class="mask" style="background-color: rgba(132,7,0,0.6)">
-                        <h2>Архитектурный Нижний</h2>
+                        <h2 style="color: #eac4c4">Архитектурный Нижний</h2>
                         <p>Достопримечательности и история архитектуры Нижнего Новгорода</p>
-                        <a href="topics/architectural.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="topics/architectural.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: indianred; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
                     <img alt="Литературный Нижний" src="img/cards/literature.jpg" />
                     <div class="mask" style="background-color: rgba(129,132,63,0.78)">
-                        <h2>Литературный Нижний</h2>
+                        <h2 style="color: #14f608bf">Литературный Нижний</h2>
                         <p>Интересная информация о нижегородской литературе</p>
-                        <a href="topics/literary.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="topics/literary.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
@@ -75,17 +75,17 @@
                 <div class="view">
                     <img alt="Промышленный Нижний" src="img/cards/industry.jpg" />
                     <div class="mask" style="background-color: rgba(132,69,22,0.73)">
-                        <h2>Промышленный Нижний</h2>
+                        <h2 style="color: #ffa900d6">Промышленный Нижний</h2>
                         <p>Интересная информация о нижегородской промышленности</p>
-                        <a href="topics/industrial.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="topics/industrial.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: darkorange; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
                     <img alt="Победный Нижний" src="img/cards/victory.jpg" />
                     <div class="mask" style="background-color: rgba(25,132,74,0.73)">
-                        <h2>Победный Нижний</h2>
+                        <h2 style="color: #7aee90">Победный Нижний</h2>
                         <p>Вклад нижегородцев в победе в Великой Отечественной войне</p>
-                        <a href="topics/victorious.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="topics/victorious.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: forestgreen; color: white">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
@@ -99,17 +99,17 @@
                 <div class="view">
                     <img alt="Православный Нижний" src="img/cards/orthodoxy.jpg" />
                     <div class="mask" style="background-color: rgba(132,115,46,0.73)">
-                        <h2>Православный Нижний</h2>
+                        <h2 style="color: orange">Православный Нижний</h2>
                         <p>О православии в Нижнем Новгороде</p>
-                        <a href="topics/orthodoxic.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="topics/orthodoxic.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #e2a91f; color: black">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
                     <img alt="Почетные граждане" src="img/cards/honorary_citizens.jpg" />
                     <div class="mask" style="background-color: rgba(132,5,61,0.73)">
-                        <h2>Почетные граждане</h2>
+                        <h2 style="color: orangered">Почетные граждане</h2>
                         <p>Информация о почетных гражданах нашего города</p>
-                        <a href="topics/honorary_citizens.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="topics/honorary_citizens.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #f45656; color: black">Перейти</a>
                     </div>
                 </div>
             </div>
