Более удобный цвет для литературной карточки

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="view">
                     <img alt="Литературный Нижний" src="img/cards/literature.jpg" />
                     <div class="mask" style="background-color: rgba(129,132,63,0.78)">
-                        <h2 style="color: #14f608bf">Литературный Нижний</h2>
+                        <h2 style="color: rgba(32,221,0,0.92)">Литературный Нижний</h2>
                         <p>Интересная информация о нижегородской литературе</p>
                         <a href="topics/literary.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
                     </div>
