Цвета театрального нижнего

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="view">
                     <img alt="Театральный Нижний" src="img/cards/theatre.jpg" />
                     <div class="mask" style="background-color: rgba(142,188,209,0.78)">
-                        <h2>Театральный Нижний</h2>
+                        <h2 style="color: #336ca0">Театральный Нижний</h2>
                         <p>Интересная информация о нижегородских театрах</p>
-                        <a href="topics/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                        <a href="topics/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
