--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -34,7 +34,7 @@
             <span id="navigation-table_of_contents" class="mdl-layout__drawer-navigation-subcategory"></span>
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
                 <a class="mdl-navigation__link mdl-navigation-current-topic">Архитектурный Нижний</a>
-                <a class="mdl-navigation__link" href="theatrical.html">Литературный Нижний</a>
+                <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
                 <a class="mdl-navigation__link" href="theatrical.html">Театральный Нижний</a>
                 <a class="mdl-navigation__link" href="industrial.html">Промышленный Нижний</a>
                 <a class="mdl-navigation__link" href="victorious.html">Победный Нижний</a>
