--- a/topics/literary.html
+++ b/topics/literary.html
@@ -51,10 +51,14 @@
                 <p class="introduction">Введение</p>
                 <div id="table_of_contents"></div>
                 <div class="chapter" id="boldino_autmn" data-chapter="Болдинская осень А.С. Пушкина">
-                    <p>Александр Сергеевич Пушкин по праву считается величайшим русским поэтом. За свою жизнь он написал более 800 произведений разных жанров, однако самая плодотворные его дни случились в Нижнем Новгороде.</p>
+                    <p>Александр Сергеевич Пушкин по праву считается величайшим русским поэтом. За свою жизнь он написал более 800 произведений разных жанров, однако самая плодотворные его дни прошли в Нижнем Новгороде.</p>
                     <img data-label="Усадьба Пушкина в Болдино"/>
                     <p>В 1830 году, наа своей усадьбе в Большом Болдино, к поэту пришло вдохновение и он с невероятной быстротой создавал одно произведение за другим. Здесь он написал более 30 произведений, включая "Повести Белкина" и конец "Евгения Онегина". Пушкин пробует новые для себя жанры, но, к сожалению, не все из задуманного он успел осуществить.</p>
                     <p>Само словосочетание "Болдинская осень" стало крылатым выражением и означает саму продуктивную пору в жизни человека, расцвет его сил и творческий подъем.</p>
+                </div>
+                <div class="chapter" id="maxim_gorky" data-chapter="Максим Горький">
+                    <p></p>
+                    <img data-label="1900 год"/>
                 </div>
             </div>
         </div>
