Другой способ выделения подкатегорий

--- a/topics/orthodoxic.html
+++ b/topics/orthodoxic.html
@@ -32,16 +32,15 @@
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
             <span id="navigation-table_of_contents" class="mdl-layout__drawer-navigation-subcategory"></span>
-            <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
-                <a class="mdl-navigation__link" href="architectural.html">Архитектурный Нижний</a>
-                <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
-                <a class="mdl-navigation__link" href="theatrical.html">Театральный Нижний</a>
-                <a class="mdl-navigation__link" href="industrial.html">Промышленный Нижний</a>
-                <a class="mdl-navigation__link" href="victorious.html">Победный Нижний</a>
-                <a class="mdl-navigation__link" href="musical.html">Музыкальный Нижний</a>
-                <a class="mdl-navigation__link mdl-navigation-current-topic">Православный Нижний</a>
-                <a class="mdl-navigation__link" href="honorary_citizens.html">Почетные граждане</a>
-            </span>
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
+            <a class="mdl-navigation__link" href="architectural.html">Архитектурный Нижний</a>
+            <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
+            <a class="mdl-navigation__link" href="theatrical.html">Театральный Нижний</a>
+            <a class="mdl-navigation__link" href="industrial.html">Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="victorious.html">Победный Нижний</a>
+            <a class="mdl-navigation__link" href="musical.html">Музыкальный Нижний</a>
+            <a class="mdl-navigation__link mdl-navigation-current-topic">Православный Нижний</a>
+            <a class="mdl-navigation__link" href="honorary_citizens.html">Почетные граждане</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
