--- a/404.html
+++ b/404.html
@@ -48,16 +48,15 @@
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="/index.html">Главная</a>
-            <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
-                <a class="mdl-navigation__link" href="/topics/architectural.html">Архитектурный Нижний</a>
-                <a class="mdl-navigation__link" href="/topics/literary.html">Литературный Нижний</a>
-                <a class="mdl-navigation__link" href="/topics/theatrical.html">Театральный Нижний</a>
-                <a class="mdl-navigation__link" href="/topics/industrial.html">Промышленный Нижний</a>
-                <a class="mdl-navigation__link" href="/topics/victorious.html">Победный Нижний</a>
-                <a class="mdl-navigation__link" href="/topics/musical.html">Музыкальный Нижний</a>
-                <a class="mdl-navigation__link" href="/topics/orthodoxic.html">Православный Нижний</a>
-                <a class="mdl-navigation__link" href="/topics/honorary_citizens.html">Почетные граждане</a>
-            </span>
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
+            <a class="mdl-navigation__link" href="/topics/architectural.html">Архитектурный Нижний</a>
+            <a class="mdl-navigation__link" href="/topics/literary.html">Литературный Нижний</a>
+            <a class="mdl-navigation__link" href="/topics/theatrical.html">Театральный Нижний</a>
+            <a class="mdl-navigation__link" href="/topics/industrial.html">Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="/topics/victorious.html">Победный Нижний</a>
+            <a class="mdl-navigation__link" href="/topics/musical.html">Музыкальный Нижний</a>
+            <a class="mdl-navigation__link" href="/topics/orthodoxic.html">Православный Нижний</a>
+            <a class="mdl-navigation__link" href="/topics/honorary_citizens.html">Почетные граждане</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
