--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link mdl-navigation-current-topic">Главная</a>
-            <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
-                <a class="mdl-navigation__link" href="topics/architectural.html">Архитектурный Нижний</a>
-                <a class="mdl-navigation__link" href="topics/literary.html">Литературный Нижний</a>
-                <a class="mdl-navigation__link" href="topics/theatrical.html">Театральный Нижний</a>
-                <a class="mdl-navigation__link" href="topics/industrial.html">Промышленный Нижний</a>
-                <a class="mdl-navigation__link" href="topics/victorious.html">Победный Нижний</a>
-                <a class="mdl-navigation__link" href="topics/musical.html">Музыкальный Нижний</a>
-                <a class="mdl-navigation__link" href="topics/orthodoxic.html">Православный Нижний</a>
-                <a class="mdl-navigation__link" href="topics/honorary_citizens.html">Почетные граждане</a>
-            </span>
+            <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
+            <a class="mdl-navigation__link" href="topics/architectural.html">Архитектурный Нижний</a>
+            <a class="mdl-navigation__link" href="topics/literary.html">Литературный Нижний</a>
+            <a class="mdl-navigation__link" href="topics/theatrical.html">Театральный Нижний</a>
+            <a class="mdl-navigation__link" href="topics/industrial.html">Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="topics/victorious.html">Победный Нижний</a>
+            <a class="mdl-navigation__link" href="topics/musical.html">Музыкальный Нижний</a>
+            <a class="mdl-navigation__link" href="topics/orthodoxic.html">Православный Нижний</a>
+            <a class="mdl-navigation__link" href="topics/honorary_citizens.html">Почетные граждане</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
@@ -66,7 +65,7 @@
                 </div>
                 <div class="view">
                     <img alt="Театральный Нижний" src="img/cards/theatre.jpg" />
-                    <div class="mask" style="background-color: rgba(142,188,209,0.78)">
+                    <div class="mask" style="background-color: rgba(0, 72, 137, 0.84)">
                         <h2 style="color: #336ca0">Театральный Нижний</h2>
                         <p>Интересная информация о нижегородских театрах</p>
                         <a href="topics/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
