И для содержания тоже

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -31,7 +31,7 @@
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
-            <span id="navigation-table_of_contents" class="mdl-layout__drawer-navigation-subcategory"></span>
+            <span id="navigation-table_of_contents"></span>
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
             <a class="mdl-navigation__link mdl-navigation-current-topic">Архитектурный Нижний</a>
             <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
