--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -85,7 +85,7 @@
                 <div class="chapter" id="fair" data-chapter="Нижегородская ярмарка">
                     <p>Нижегородская ярмарка — исторический район, где располагалась крупнейшая ярмарка Российской империи и располагается главная нижегородская выставка.</p>
                     <img/>
-                    <img data-label="XIX век"/>
+                    <img data-label="Фотограция XIX века"/>
                 </div>
             </div>
         </div>
