--- a/topics/literary.html
+++ b/topics/literary.html
@@ -56,7 +56,7 @@
                     <p>Само словосочетание "Болдинская осень" стало крылатым выражением и означает саму продуктивную пору в жизни человека, расцвет его сил и творческий подъем.</p>
                 </div>
                 <div class="chapter" id="maxim_gorky" data-chapter="Максим Горький">
-                    <p>Максим Горький <i>(настоящее имя - Алексей Максимович Пешков)</i> - самый издаваемый в СССР писатель, родившийся в Нижнем Новгороде.</p>
+                    <p>Максим Горький <i>(настоящее имя - Алексей Максимович Пешков)</i> - нижегородский и самый издаваемый в СССР писатель.</p>
                     <img data-label="1900 год"/>
                     <p>Он был основоположником литературы социалистического реализма и первым рукводителем Союза писателей СССР, являясь одним из самых значительных и известных в мире русских писателей и мыслителей.</p>
                     <p>Какое-то время быв крупнейшим спонсором большевиков, скептически относился к октябрьской революции и советской власти на начальных порах. В его честь Нижний Новгород в 1932 году, незадолго до его смерти, был переименован в Горький. Историческое название вернулось к городу лишь в 1990 году.</p>
