--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="view">
                     <img alt="Театральный Нижний" src="img/cards/theatre.jpg" />
-                    <div class="mask" style="background-color: rgba(0, 72, 137, 0.84)">
-                        <h2 style="color: #336ca0">Театральный Нижний</h2>
+                    <div class="mask" style="background-color: rgba(142,188,209,0.78)">
+                        <h2 style="color: #004889d6">Театральный Нижний</h2>
                         <p>Интересная информация о нижегородских театрах</p>
                         <a href="topics/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
                     </div>
